README & Game (loads, gives a win, but still continues, fix inbound)